Check data saving in tables- Sandeep

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
@@ -133,7 +133,7 @@
                 </div>
 
 
-                <div class="Container100 CustomWidthAccountypePanel" style="display: none">
+                <div class="Container100 CustomWidthAccountypePanel" >
                     <p:commandLink actionListener="#{tdcto.selectAcctType(7)}"
                                    process="@this"
                                    update=":ctoForm:tdaccordian:acctTypePanel">
