--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
@@ -102,7 +102,7 @@
                 <ui:fragment rendered="#{tcmpb.goal == 'Wealth' || tcmpb.goal == 'Other'}">
 
                     <h3 class="formFS TexAlCenter ">
-                        I plan on utilize the funds for this goal in
+                        I plan on utilizing the funds
                         <p:inputNumber id="otherid"
                                         styleClass="invInputText input_agewid1 mobileFullWidthinput"
 										value="#{tcmpb.horizon}"
