--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p5.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p5.xhtml
@@ -211,8 +211,7 @@
         </div>
     </div>
 
-    <div
-            class="Container30-tcmUI Fright PSlabPadding EnableProjectionSlab">
+    <div class="Container30-tcmUI Fright PSlabPadding EnableProjectionSlab">
         <div class="Container30 FrightForced VerticalLine">
             <div class="FS15">Higher Risk</div>
             <div class="VerticalTriangleTop MarAuto"></div>
