--- a/tcm/modules/web/src/main/webapp/pages/custody/td/tdconfirmation.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/tdconfirmation.xhtml
@@ -20,19 +20,24 @@
 
 						<div class="EmptyBox10"></div>
 						<div class="ContainerIndent">
-							<h3 class="FsRes14">Confirmation</h3>
+							<h3 class="FsRes14">Your Application is Being Processed</h3>
 						</div>
 						<div class="EmptyBox10"></div>
 						<div class="ContainerIndent">
-							<h3 class="FsRes14">Your application will be processed by
-								Docusign.You will soon receive two emails
-                                (TD Application and Advisor ADV forms)
-                                for reviewing the
-								application and signature for approval.</h3>
+							<h3 class="FsRes14">Your next step is to electronically
+                                sign your application documents using DocuSign, a leading secure
+                                e-signature company.
+                                You will soon receive two emails from DocuSign with forms for
+                                you to sign: your TD Ameritrade Institutional Application Documents
+                                and your Building Benjamins / Tradition
+                                Capital Management Advisory Agreement and other required
+                                disclosures.</h3>
 						</div>
 						<div class="ContainerIndent">
-							<h4 class="FsRes13">(Note : If it is a joint account then
-								both account holder will receive an email for signature)</h4>
+							<h4 class="FsRes13">
+                                (Note : If it is a joint account then both account holder will
+                                receive an email for signature)”
+                            </h4>
 						</div>
 						<div class="EmptyBox10"></div>
                            <p:commandButton value="OK" styleClass="Fs16 BlueButton"
