--- a/tcm/modules/web/src/main/webapp/pages/common/myprofile.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/common/myprofile.xhtml
@@ -40,7 +40,7 @@
                                         <p:panel style="border: 0px;">
                                             <div class="Container100">
                                                 <h3>
-                                                    <h:outputText value="These below questions and answers will be used to further authenticate you when needed." styleClass="Wid90"/>
+                                                    <h:outputText value="These questions and answers will be used to authenticate your identity." styleClass="Wid90"/>
                                                 </h3>
                                             </div>
                                             <div class="EmptyBox10"/>
