--- a/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
@@ -66,7 +66,7 @@
                                 <h4>UTMA / UGMA</h4>
 
                                 <div class="EmptyBox5"></div>
-                                <h6 class="FontNormal">(Minor Cutodian Account)</h6>
+                                <h6 class="FontNormal">(Minor Custodian Account)</h6>
                             </div>
                             <div class="Container30 textAlign">
                                 <img src="#{tdcto.getCheckedImage(3)}" class="atCheckMarkImg"/>
