--- a/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
@@ -36,7 +36,7 @@
 					<div class="Container100 MarginBottom">
 						<p:dataTable id="singleDT" var="benefiaciary"
 									 value="#{tdcto.tdMasterData.benefiaciaryDetailsList}"
-									 emptyMessage="No beneficiary account added. Add a new beneficiary account"
+									 emptyMessage="No beneficiary added. Add a new beneficiary."
 									 reflow="true">
 
 							<p:column styleClass="Wid25 TexAlCenter ZeroPaddingBottom">
