Check data saving in tables- Sandeep

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/address.xhtml
@@ -31,7 +31,7 @@
                         <div class="EmptyBox5"></div>
                         <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft  AddressFieldOnly"
                                      value="#{tdcto.tdMasterData.acctOwnersDetail.physicalAddressStreet}"
-                                     placeholder="Street Address 1"
+                                     placeholder="Residence Street Address 1"
                                      maxlength="50"
                                      required="false">
 
@@ -120,7 +120,7 @@
                         <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft AddressFieldOnly"
                                      value="#{tdcto.tdMasterData.acctOwnersDetail.mailingAddressStreet}"
                                      maxlength="50"
-                                     placeholder="Street Address 1">
+                                     placeholder="Mailing Street Address 1">
                         </p:inputText>
                         <!--  <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
                                       placeholder="Street Address 2">
@@ -219,7 +219,7 @@
                         <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft AddressFieldOnly"
                                      value="#{tdcto.tdMasterData.jointAcctOwnersDetail.physicalAddressStreet}"
                                      maxlength="50"
-                                     placeholder="Street Address 1">
+                                     placeholder="Residence Street Address 1">
                         </p:inputText>
                         <!--  <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
                                       placeholder="Street Address 2">
@@ -304,7 +304,7 @@
                             <p:inputText styleClass="CustomWidthAddressFA FS14 Fleft AddressFieldOnly"
                                          value="#{tdcto.tdMasterData.jointAcctOwnersDetail.mailingAddressStreet}"
                                          maxlength="50"
-                                         placeholder="Street Address 1">
+                                         placeholder="Mailing Street Address 1">
                             </p:inputText>
                             <!-- <p:inputText styleClass="CustomWidthAddressFA FS14 Fright" disabled="true"
                                          placeholder="Street Address 2">
