--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -11,13 +11,13 @@
         <p:tab title="Fund" id="tab6S0">
             <!--<p:panel id="fundPanel" style="border: 0px; background: transparent">-->
 
-                <p:panel rendered="#{tdcto.getErrorMessage(9) != null}"
-                         style="border: 0px; background: transparent"
-                         styleClass="Container100 MarAuto ">
-                    <h:outputText styleClass="errorText"
-                                  value="#{tdcto.getErrorMessage(9)}" escape="false"/>
-                </p:panel>
-                <!--</p:panel>-->
+            <p:panel rendered="#{tdcto.getErrorMessage(9) != null}"
+                     style="border: 0px; background: transparent"
+                     styleClass="Container100 MarAuto ">
+                <h:outputText styleClass="errorText"
+                              value="#{tdcto.getErrorMessage(9)}" escape="false"/>
+            </p:panel>
+            <!--</p:panel>-->
             <p:panel id="funddetailsPanel" style="border: 0px; background: transparent" >
 
                 <div class="Container100">
@@ -176,6 +176,34 @@
                                                  value="#{tdcto.tdMasterData.achBankDetail.bankAcctName}"
                                                  maxlength="90"
                                                  placeholder="Name on bank account">
+                                    </p:inputText>
+                                </div>
+                            </div>
+                            <div class="EmptyBox20"></div>
+                            <div class="Container100">
+                                <div class="Container45 Fleft CustomWidthFA-Responsive">
+                                    <label Class="Container100"
+                                           style="text-align: left !important; font-weight: bold !important;">
+                                        Bank City/State  *</label>
+
+                                    <div class="EmptyBox5"></div>
+                                    <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
+                                                 value="#{tdcto.tdMasterData.achBankDetail.bankCityState}"
+                                                 maxlength="90"
+                                                 placeholder="Bank City/State">
+                                    </p:inputText>
+                                </div>
+                                <div class="Container45 Fright CustomWidthFA-Responsive">
+                                    <label Class="Container100"
+                                           style="text-align: left !important; font-weight: bold !important;">
+                                        Bank Phone Number *</label>
+
+                                    <div class="EmptyBox5"></div>
+                                    <p:inputText styleClass="Wid90 FS14 CustomWidthFA-Responsive"
+                                                 value="#{tdcto.tdMasterData.achBankDetail.bankPhoneNumber}"
+                                                 maxlength="15"
+                                                 mask="(999) 999-9999"
+                                                 placeholder="Bank Phone Number">
                                     </p:inputText>
                                 </div>
                             </div>
@@ -416,8 +444,7 @@
                         <p:selectBooleanCheckbox
                                 styleClass="RegulatoryCheckBox"
                                 value="#{tdcto.tdMasterData.fundNow}"
-                                escape="false"
-                                itemLabel="I choose to opt-out of funding my account at the moment.">
+                                itemLabel="I choose to opt-out of funding my account at the moment. (Please note that if your account is not funded within 30 days it will be closed.)">
                             <p:ajax update=":ctoForm:tdaccordian:fundTabV"/>
 
                         </p:selectBooleanCheckbox>
@@ -539,7 +566,7 @@
                                     Account Type *</label>
 
                                 <div class="EmptyBox5"></div>
-                                <p:selectOneMenu styleClass="formpageDropdown FundAccountDropdownUI"
+                                <p:selectOneMenu styleClass="formpageDropdown FundAccountDropdownUI" disabled="#{tdcto.tdMasterData.ownerSPF and tdcto.tdMasterData.fundType == 'PMACH'}"
                                                  value="#{tdcto.tdMasterData.electroicBankDetail.bankAcctType}"
                                                  style="width: 100%;">
                                     <p:ajax/>
@@ -558,7 +585,7 @@
                                     Bank Name  *</label>
 
                                 <div class="EmptyBox5"></div>
-                                <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+                                <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive" disabled="#{tdcto.tdMasterData.ownerSPF and tdcto.tdMasterData.fundType == 'PMACH'}"
                                              value="#{tdcto.tdMasterData.electroicBankDetail.bankName}"
                                              maxlength="90"
                                              placeholder="Bank Name">
@@ -569,10 +596,37 @@
                                        style="text-align: left !important; font-weight: bold !important;">Bank Account Title <span class="Fs12">(Please provide full title of the account)</span> *</label>
 
                                 <div class="EmptyBox5"></div>
-                                <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+                                <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive" disabled="#{tdcto.tdMasterData.ownerSPF and tdcto.tdMasterData.fundType == 'PMACH'}"
                                              value="#{tdcto.tdMasterData.electroicBankDetail.bankAcctName}"
                                              maxlength="90"
                                              placeholder="Bank Account Title">
+                                </p:inputText>
+                            </div>
+                        </div>
+                        <div class="EmptyBox20"></div>
+                        <div class="Container100">
+                            <div class="Container45 Fleft CustomWidthFA-Responsive">
+                                <label Class="Container100"
+                                       style="text-align: left !important; font-weight: bold !important;">
+                                    Bank City/State  *</label>
+
+                                <div class="EmptyBox5"></div>
+                                <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive" disabled="#{tdcto.tdMasterData.ownerSPF and tdcto.tdMasterData.fundType == 'PMACH'}"
+                                             value="#{tdcto.tdMasterData.electroicBankDetail.bankCityState}"
+                                             maxlength="90"
+                                             placeholder="Bank City/State">
+                                </p:inputText>
+                            </div>
+                            <div class="Container45 Fright CustomWidthFA-Responsive">
+                                <label Class="Container100"
+                                       style="text-align: left !important; font-weight: bold !important;">Bank Phone Number *</label>
+
+                                <div class="EmptyBox5"></div>
+                                <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive" disabled="#{tdcto.tdMasterData.ownerSPF and tdcto.tdMasterData.fundType == 'PMACH'}"
+                                             value="#{tdcto.tdMasterData.electroicBankDetail.bankPhoneNumber}"
+                                             maxlength="15"
+                                             mask="(999) 999-9999"
+                                             placeholder="Bank Phone Number">
                                 </p:inputText>
                             </div>
                         </div>
@@ -588,7 +642,7 @@
                                     Routing Number *</label>
 
                                 <div class="EmptyBox5"></div>
-                                <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+                                <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive" disabled="#{tdcto.tdMasterData.ownerSPF and tdcto.tdMasterData.fundType == 'PMACH'}"
                                              value="#{tdcto.tdMasterData.electroicBankDetail.bankABARouting}"
                                              maxlength="40"
                                              placeholder="ABA Routing Number">
@@ -600,7 +654,7 @@
                                     Bank Account Number *</label>
 
                                 <div class="EmptyBox5"></div>
-                                <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive"
+                                <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive" disabled="#{tdcto.tdMasterData.ownerSPF and tdcto.tdMasterData.fundType == 'PMACH'}"
                                              value="#{tdcto.tdMasterData.electroicBankDetail.bankAcctNumber}"
                                              maxlength="90"
                                              placeholder="Bank Account Number">
@@ -619,18 +673,18 @@
                         </p:selectBooleanCheckbox>
                     </div>
                     <div class="EmptyBox10"></div>
-                     <div class="Container100 MarTop20" style="margin: 10px 10px;">
-                    <p:commandLink styleClass="UI-prevButtonFA Fleft"
-                                   actionListener="#{tdcto.prevPage}"
-                                   process="@this"
-                                   update="@form"/>
-                    <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
-                                   actionListener="#{tdcto.nextPage}"
-                                   update="@form"/>
+                    <div class="Container100 MarTop20" style="margin: 10px 10px;">
+                        <p:commandLink styleClass="UI-prevButtonFA Fleft"
+                                       actionListener="#{tdcto.prevPage}"
+                                       process="@this"
+                                       update="@form"/>
+                        <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
+                                       actionListener="#{tdcto.nextPage}"
+                                       update="@form"/>
 
-                  <!--   <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
-                            rendered="false"/> -->
-                </div>
+                        <!--   <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
+                                  rendered="false"/> -->
+                    </div>
                 </div>
 
             </p:panel>
