--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final.xhtml
@@ -11,8 +11,7 @@
             <div class="Container100 Responsive100">
                 <div class="Container50 Responsive50 Fleft">
                     <div class="Container100 Fleft TexAlCenter">
-                        Based on the responses that you have given on the
-                        risk tolerance questionnaire we have selected the
+                        Based on the responses that you have given, we have selected the
                         <strong>#{tcmpb.fixedModelName}</strong> strategy for you.
                     </div>
                     <div class="EmptyBox10"></div>
