--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
@@ -54,7 +54,7 @@
                     </p:commandLink>
                 </p:panel>
                 <div class="EmptyBox10"></div>
-                <h:outputText value="The question determines your attitude towards risk.
+                <h:outputText value="Your selection determines your attitude towards risk.
                 It is one of many inputs that determine your optimal portfolio.
                 A change in your attitude towards risk may not impact your initial target portfolio.">
 
