--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p5.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p5.xhtml
@@ -181,8 +181,9 @@
         5 options, which range of uncertainty best matches your comfort
         level?
 -->
-        The chart below is a hypothetical simulation of the performance of 5 portfolios at
-        differing levels of risk. Which range of risk and return best matches your comfort level?
+        Below is a simulation of the possible performance ranges over time of five
+        hypothetical portfolios at differing levels of risk. Comparing the five options,
+        which range of uncertainty best matches your comfort level?
 
     </h3>
 
