--- a/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
@@ -184,7 +184,7 @@
 					<div class="Container100 CustomWidthFA2 MarTop5">
 						<p:selectBooleanCheckbox styleClass="RegulatoryCheckBox"
 							value="#{tdcto.tdMasterData.ownerBD}"
-							itemLabel="I, my spouse or an immediate member of my family is a licensed, employed by or associated with a broker-dealer firm, a financial services regulator, securities exchange, or a member of a securities exchange. (Please provide a copy of the required authorization letter)">
+							itemLabel="I, my spouse or an immediate member of my family is licensed, employed by or associated with a broker-dealer firm, a financial services regulator, securities exchange, or a member of a securities exchange. (Please provide a copy of the required authorization letter)">
 							<p:ajax update=":ctoForm:tdaccordian:regTabV:ownerBDPanel" />
 
 						</p:selectBooleanCheckbox>
