--- a/tcm/modules/web/src/main/webapp/pages/custody/td/tdconfirmation.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/tdconfirmation.xhtml
@@ -24,19 +24,20 @@
 						</div>
 						<div class="EmptyBox10"></div>
 						<div class="ContainerIndent">
-							<h3 class="FsRes14">Your next step is to electronically
-                                sign your application documents using DocuSign, a leading secure
-                                e-signature company.
-                                You will soon receive two emails from DocuSign with forms for
-                                you to sign: your TD Ameritrade Institutional Application Documents
-                                and your Building Benjamins / Tradition
-                                Capital Management Advisory Agreement and other required
-                                disclosures.</h3>
+							<h3 class="FsRes14">
+                                You will receive two emails from DocuSign, a leading
+                                secure e-signature company, with forms requiring your
+                                electronic signature:
+                                1) TD Ameritrade Institutional Application Documents and
+                                2) Building Benjamins / Tradition Capital Management Advisory
+                                Agreement with other required disclosures.
+
+                            </h3>
+
 						</div>
 						<div class="ContainerIndent">
 							<h4 class="FsRes13">
-                                (Note : If it is a joint account then both account holder will
-                                receive an email for signature)”
+                                (Note : If it is a joint account then both account holders will receive an email for signature)”
                             </h4>
 						</div>
 						<div class="EmptyBox10"></div>
