--- a/tcm/modules/web/src/main/webapp/signup2.xhtml
+++ b/tcm/modules/web/src/main/webapp/signup2.xhtml
@@ -84,7 +84,7 @@
 										styleClass="selectBG formpageDropdown FundAccountDropdownUI"
 										id="q3" value="#{userBean.beanq3}" required="true"
 										requiredMessage="Please choose Question #3">
-										<f:selectItem itemLabel="Describe" itemValue="" />
+										<f:selectItem itemLabel="Select One" itemValue="" />
 										<f:selectItems
 											value="#{userBean.userdata.getQuestion(2).entrySet()}"
 											var="q3" itemLabel="#{q3.value}" itemValue="#{q3.value}" />
