--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd.xhtml
@@ -9,6 +9,7 @@
     <f:metadata>
         <f:viewParam name="advisor" value="#{webutil.uiprofile.advisor}"/>
         <f:viewParam name="rep" value="#{webutil.uiprofile.rep}"/>
+        <f:viewParam name="app" value="#{tcmpb.newapp}"/>
         <f:viewParam name="acct" value="#{tcmpb.beanAcctnum}"/>
         <f:event type="preRenderView" listener="#{tcmpb.preRenderView}"/>
     </f:metadata>
