--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p3.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p3.xhtml
@@ -18,7 +18,7 @@
                                       layout="pageDirection">
                         <p:ajax listener="#{tcmpb.onChangeValue}"
                                 update=":ceForm:inputArea"/>
-                        <f:selectItem itemLabel="Maximize current Income" itemValue="1" />
+                        <f:selectItem itemLabel="Maximizing Current Income" itemValue="1" />
                         <f:selectItem itemLabel="Emphasizing income with some potential for growth" itemValue="2" />
                         <f:selectItem itemLabel="Emphasizing growth with some potential for income" itemValue="3" />
                         <f:selectItem itemLabel="Growth" itemValue="4" />
